box of slogan added to index

--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,11 @@
         </nav>
         <div class="icon"></div>
     </header>
+    <section class="box1">
+        <div class="app-box"><a href="#">دانلود اپلیکیشن</a></div>
+        <p class="slogan">با لونی در گذشته نمانید</p>
+        <div class="mobile"></div>
+    </section>
 
 </body>
 </html>
