--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,20 @@
         <p class="slogan">با لونی در گذشته نمانید</p>
         <div class="mobile"></div>
     </section>
+    <section class="description">
+        <article>
+            <header>پول نقد خود را با ما کنار بگذارید</header>
+            <p>
+                مطمئنا برای شما پیش آمده است که به فروشگاهی رفتید و در حین خرید متوجه شدید پول نقد یا کارت خود را فراموش کرده اید... یا شاید هنگام پرداخت با صفی طولانی روبه رو شوید و خبر خوب این است که در اپلیکیشن لونی پی به راحتی با یک کلیک میتوانید کیف پول شخصی خود را ایجاد کنید و از امکانات خرید، انتقال و همچنین درخواست پول از دیگران. استفاده کنید
+            </p>
+        </article>
+        <div class="mobile-screen">
+            <div class="moile"></div>
+        </div>
+    </section>
+    <section class="sugestion">
+        <p>. تردید نکنید، موبایل خود را برداشته و از نعمت امکانات دنیای تکنولوژی بهره مند شوید</p>
+    </section>
 
 </body>
 </html>
