points and contact us added to index

--- a/index.htm
+++ b/index.htm
@@ -36,6 +36,38 @@
     <section class="sugestion">
         <p>. تردید نکنید، موبایل خود را برداشته و از نعمت امکانات دنیای تکنولوژی بهره مند شوید</p>
     </section>
+    <section class="points">
+        <holder>
+            <div class="item it1">
+                <div class="pic"></div>
+                <h4 class="title">امنیت</h4>
+                <p> .ما اطمینان خاطر حاصل میکنیم تا پرداختی ایمن  را برای شما به ارمغان اوریم </p>
+            </div>
+            <div class="item it2">
+                <div class="pic"></div>
+                <h4 class="title">سرعت</h4>
+                <p> ، سرعت بالای انجام عملیات در عین کارکرد. مطمئن را با ما تجربه کنید </p>
+            </div>
+            <div class="item it3">
+                <div class="pic"></div>
+                <h4 class="title">اسان</h4>
+                <p> دسترسی و عملکرد راحت و آسان . هدیه ما به شماست </p>
+            </div>
+            <div class="item it4">
+                <div class="pic"></div>
+                <h4 class="title">دوستدار زمین</h4>
+                <p> با حذف فاکتور کاغذی و کاهش میزان مصرف کاغذ . حافظ محیط زیست خود باشید </p>
+            </div>
+            
+        </holder>
+    </section>
+    <section class="contact-us">
+        <h2>تماس باما:</h2>
+        <p>. پشتیبانی در هر ساعت از شبانه روز با هدف بهبود خدمات ارائه شده به شما مشتریان گرامی است</p>
+        <p>. همچنین در جهت رشد و توسعه لونی همواره از پشنهادات و انتقادات شما عزیزان به گرمی استقبال میکنیم</p>
+        <span>در این راه همراه ما باشید</span>
+    </section>
 
+    
 </body>
 </html>
