footer tag added to index.htm

--- a/index.htm
+++ b/index.htm
@@ -67,6 +67,30 @@
         <p>. همچنین در جهت رشد و توسعه لونی همواره از پشنهادات و انتقادات شما عزیزان به گرمی استقبال میکنیم</p>
         <span>در این راه همراه ما باشید</span>
     </section>
+    <footer>
+        <div class="holder">
+            <div class="right">
+                <header></header>
+                <span class="item telegram"><a href="#"></a></span>
+                <span class="item instagram"><a href="#"></a></span>
+                <span class="item twitter"><a href="#"></a></span>
+
+            </div>
+            <div class="left">
+                <div class="item tel">
+                    <span class="icon"></span>
+                    <span class="title"></span>
+                    <span class="value"></span>
+                </div>
+                <div class="item email">
+                        <span class="icon"></span>
+                        <span class="title"></span>
+                        <span class="value"></span>
+                    </div>
+            </div>
+        </div>
+        <p>. تمامی حقوق این سایت متعلق لونی است </p>
+    </footer>
 
     
 </body>
