--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="StyleSheet" type="text/css" href="assets/styles/header.css">
+    <link rel="StyleSheet" type="text/css" href="assets/styles/content.css">
+    <link rel="StyleSheet" type="text/css" href="assets/styles/footer.css">
+
+
     <meta charset="utf-8" />
     <title></title>
 </head>
