--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="StyleSheet" type="text/css" href="assets/styles/reset.css">
     <link rel="StyleSheet" type="text/css" href="assets/styles/header.css">
     <link rel="StyleSheet" type="text/css" href="assets/styles/content.css">
     <link rel="StyleSheet" type="text/css" href="assets/styles/footer.css">
