--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="StyleSheet" type="text/css" href="assets/styles/reset.css">
-    <link rel="StyleSheet" type="text/css" href="assets/styles/header.css">
-    <link rel="StyleSheet" type="text/css" href="assets/styles/content.css">
-    <link rel="StyleSheet" type="text/css" href="assets/styles/footer.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/header.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/content.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/footer.css">
 
 
     <meta charset="utf-8" />
