--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8" />
+
     <link rel="stylesheet" type="text/css" href="assets/styles/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/header.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/content.css">
     <link rel="stylesheet" type="text/css" href="assets/styles/footer.css">
-
-
-    <meta charset="utf-8" />
+    
     <title></title>
 </head>
 <body>
@@ -101,3 +103,4 @@
     
 </body>
 </html>
+
