--- a/index.htm
+++ b/index.htm
@@ -15,8 +15,16 @@
 <body>
     <header>
         <nav>
+
+            <input type="checkbox" id="men">
+            <div class="icon">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+                <label for="men"></label>
+            </div>
             <ul class="menu">
-                <li class="item"><a href="#"></a>صفحه‌ی اصلی</li>
+                <li class="item sel"><a href="#"></a>صفحه‌ی اصلی</li>
                 <li class="item"><a href="#"></a>تصاویر</li>
                 <li class="item"><a href="#"></a>خدمات</li>
                 <li class="item"><a href="#"></a>پیشنهادات</li>
