--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <meta charset="utf-8" />
 
     <link rel="stylesheet" type="text/css" href="assets/styles/reset.css">
@@ -13,25 +14,28 @@
     <title></title>
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="topHeader">
+        <div class="holder">
+            <nav>
 
-            <input type="checkbox" id="men">
-            <div class="icon">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-                <label for="men"></label>
-            </div>
-            <ul class="menu">
-                <li class="item sel"><a href="#"></a>صفحه‌ی اصلی</li>
-                <li class="item"><a href="#"></a>تصاویر</li>
-                <li class="item"><a href="#"></a>خدمات</li>
-                <li class="item"><a href="#"></a>پیشنهادات</li>
-                <li class="item"><a href="#"></a>درباره ما</li>
-            </ul>
-        </nav>
-        <div class="icon"></div>
+                <input type="checkbox" id="men">
+                <div class="icon">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <label for="men"></label>
+                </div>
+                <ul class="menu">
+                    <li class="item sel"><a href="#"></a>صفحه‌ی اصلی</li>
+                    <li class="item"><a href="#"></a>تصاویر</li>
+                    <li class="item"><a href="#"></a>خدمات</li>
+                    <li class="item"><a href="#"></a>پیشنهادات</li>
+                    <li class="item"><a href="#"></a>درباره ما</li>
+                </ul>
+            </nav>
+            <div class="icon">Looni</div>
+        </div>
+        
     </header>
     <section class="box1">
         <div class="app-box"><a href="#">دانلود اپلیکیشن</a></div>
