description has completed.

--- a/index.htm
+++ b/index.htm
@@ -52,8 +52,8 @@
                 مطمئنا برای شما پیش آمده است که به فروشگاهی رفتید و در حین خرید متوجه شدید پول نقد یا کارت خود را فراموش کرده اید... یا شاید هنگام پرداخت با صفی طولانی روبه رو شوید و خبر خوب این است که در اپلیکیشن لونی پی به راحتی با یک کلیک میتوانید کیف پول شخصی خود را ایجاد کنید و از امکانات خرید، انتقال و همچنین درخواست پول از دیگران. استفاده کنید
             </p>
         </article>
-        <div class="mobile-screen">
-            <div class="moile"></div>
+        <div class="mobileScreen">
+            <div class="mobile"></div>
         </div>
     </section>
     <section class="sugestion">
