suggestion part finished

--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
             <div class="mobile"></div>
         </div>
     </section>
-    <section class="sugestion">
+    <section class="suggestion">
         <p>. تردید نکنید، موبایل خود را برداشته و از نعمت امکانات دنیای تکنولوژی بهره مند شوید</p>
     </section>
     <section class="points">
