--- a/index.htm
+++ b/index.htm
@@ -60,7 +60,7 @@
         <p>. تردید نکنید، موبایل خود را برداشته و از نعمت امکانات دنیای تکنولوژی بهره مند شوید</p>
     </section>
     <section class="points">
-        <holder>
+        <div class="holder">
             <div class="item it1">
                 <div class="pic"></div>
                 <h4 class="title">امنیت</h4>
@@ -73,7 +73,7 @@
             </div>
             <div class="item it3">
                 <div class="pic"></div>
-                <h4 class="title">اسان</h4>
+                <h4 class="title">آسان</h4>
                 <p> دسترسی و عملکرد راحت و آسان . هدیه ما به شماست </p>
             </div>
             <div class="item it4">
@@ -82,7 +82,7 @@
                 <p> با حذف فاکتور کاغذی و کاهش میزان مصرف کاغذ . حافظ محیط زیست خود باشید </p>
             </div>
             
-        </holder>
+        </div>
     </section>
     <section class="contact-us">
         <h2>تماس باما:</h2>
