footer styled for 1280px

--- a/index.htm
+++ b/index.htm
@@ -105,26 +105,26 @@
     <footer>
         <div class="holder">
             <div class="right">
-                <header></header>
-                <a href="#" class="item telegram"></a>
-                <a href="#" class="item instagram"></a>
-                <a href="#" class="item twitter"></a>
+                <header>ارتباط با ما:</header>
+                <a href="#" class="item "><div class="telegram"></div></a>
+                <a href="#" class="item "><div class="instagram"></div></a>
+                <a href="#" class="item "><div class="twitter"></div></a>
 
             </div>
             <div class="left">
-                <div class="item tel">
-                    <span class="icon"></span>
-                    <span class="title"></span>
-                    <span class="value"></span>
+                <div class="item">
+                    <div class="icon tel"></div>
+                    <span class="title">شماره تماس پشتیبانی</span>
+                    <span class="value">۰۲۱-۹۹۹۹۹۹۹۹</span>
                 </div>
-                <div class="item email">
-                        <span class="icon"></span>
-                        <span class="title"></span>
-                        <span class="value"></span>
-                    </div>
+                <div class="item">
+                    <div class="icon email"></div>
+                    <span class="title">پست الکترونیک</span>
+                    <span class="value">looni_py@yahoo.com</span>
+                </div>
             </div>
         </div>
-        <p>. تمامی حقوق این سایت متعلق لونی است </p>
+        <p>تمامی حقوق این سایت متعلق لونی است. </p>
     </footer>
 
     
