header and alittle content responsived for mobile

--- a/index.htm
+++ b/index.htm
@@ -26,11 +26,11 @@
                     <label for="men"></label>
                 </div>
                 <ul class="menu">
-                    <li class="item sel"><a href="#"></a>صفحه‌ی اصلی</li>
-                    <li class="item"><a href="#"></a>تصاویر</li>
-                    <li class="item"><a href="#"></a>خدمات</li>
-                    <li class="item"><a href="#"></a>پیشنهادات</li>
-                    <li class="item "><a href="#"></a>درباره ما</li>
+                    <a class="item sel" href="#"><li>صفحه‌ی اصلی</li></a>
+                    <a class="item" href="#"><li>تصاویر</li></a>
+                    <a class="item" href="#"><li>خدمات</li></a>
+                    <a class="item" href="#"><li>پیشنهادات</li></a>
+                    <a class="item" href="#"><li>درباره ما</li></a>
                 </ul>
             </nav>
             <div class="icon">Looni</div>
